plugins {
    id 'application'
    id 'org.springframework.boot' version '2.7.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.example'
version = '1.0'
sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
    implementation 'com.google.guava:guava:30.1.1-jre'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
    runtimeOnly 'org.webjars:webjars-locator:0.38'
    implementation 'org.springframework.boot:spring-boot-gradle-plugin:2.7.1'
}

application {
    // Define the main class for the application.
    mainClass = 'com.example.questapitest.QuestApiTestApplication'
}

tasks.named('test') {
    useJUnitPlatform()
}